--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # installed packages (better: `npm install` / `bower install`)
 node_modules
 bower_components
+.eslintrc.json
+prettier.json
 
 # OS-generated files
 .DS_Store
