--- a/package.json
+++ b/package.json
@@ -18,5 +18,11 @@
   "homepage": "https://github.com/FullstackAcademy/guessing-game#readme",
   "devDependencies": {
     "testem": "^2.14.0"
+  },
+  "dependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.4.0"
   }
 }
